--- a/002-desarrollando-en-node/package.json
+++ b/002-desarrollando-en-node/package.json
@@ -5,9 +5,11 @@
   "main": "./src/app",
   "scripts": {
     "start": "node ./src/app",
-    "start:dev": "echo \"Hola mundo desde dev\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon ./src/app"
   },
   "author": "Juan Camilo López Morales",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
